--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
-    "react-voice-recorder": "^2.1.2",
+    "react-webcam": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
