--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "client": "cd client && npm start",
     "client:install": "cd client && npm i",
-    "client:uninstall": "cd client && npm uninstall"
+    "client:uninstall": "cd client && npm uninstall",
+    "server": "cd server && npm run dev",
+    "server:install": "cd server && npm i"
   },
   "repository": {
     "type": "git",
