--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootswatch": "^5.1.3",
+    "form-data": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.0",
