--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
+    "serve-static": "^1.14.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
